--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -85,6 +85,7 @@
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildqueryinput" class="tsd-kind-icon">build<wbr>Query<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildrequestputitem" class="tsd-kind-icon">build<wbr>Request<wbr>Put<wbr>Item</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildscaninput" class="tsd-kind-icon">build<wbr>Scan<wbr>Input</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildtransactwriteitemsinput" class="tsd-kind-icon">build<wbr>Transact<wbr>Write<wbr>Items<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildupdateinputfromactions" class="tsd-kind-icon">build<wbr>Update<wbr>Input<wbr>From<wbr>Actions</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildupdatetimetoliveinput" class="tsd-kind-icon">build<wbr>Update<wbr>Time<wbr>ToLive<wbr>Input</a></li>
 							</ul>
@@ -104,7 +105,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L791">requestBuilder.ts:791</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L821">requestBuilder.ts:821</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -153,7 +154,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L808">requestBuilder.ts:808</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L838">requestBuilder.ts:838</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -204,7 +205,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L746">requestBuilder.ts:746</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L776">requestBuilder.ts:776</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -254,7 +255,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L484">requestBuilder.ts:484</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L487">requestBuilder.ts:487</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -289,7 +290,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L524">requestBuilder.ts:524</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L527">requestBuilder.ts:527</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -324,7 +325,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L459">requestBuilder.ts:459</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L462">requestBuilder.ts:462</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -359,7 +360,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L563">requestBuilder.ts:563</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L593">requestBuilder.ts:593</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -405,7 +406,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L329">requestBuilder.ts:329</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L332">requestBuilder.ts:332</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -443,7 +444,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L694">requestBuilder.ts:694</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L724">requestBuilder.ts:724</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -473,7 +474,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -514,7 +515,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -549,7 +550,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L369">requestBuilder.ts:369</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -603,7 +604,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -619,6 +620,9 @@
 								</li>
 								<li>
 									<h5>item: <span class="tsd-signature-type">any</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The item to serialize.</p>
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">AttributeValue</span></h4>
@@ -636,7 +640,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L435">requestBuilder.ts:435</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L438">requestBuilder.ts:438</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -672,6 +676,37 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="buildtransactwriteitemsinput" class="tsd-anchor"></a>
+					<h3>build<wbr>Transact<wbr>Write<wbr>Items<wbr>Input</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">build<wbr>Transact<wbr>Write<wbr>Items<wbr>Input<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">...</span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">UpdateItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DeleteItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">TransactWriteItemsInput</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L561">requestBuilder.ts:561</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Build a request object that can be passed into <code>transactWriteItems</code>.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5><span class="tsd-flag ts-flagRest">Rest</span> <span class="tsd-signature-symbol">...</span>input: <span class="tsd-signature-symbol">(</span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">UpdateItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DeleteItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>Any combination of inputs into <code>putItem</code>, <code>deleteItem</code> and <code>updateItem</code>.</p>
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">TransactWriteItemsInput</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="buildupdateinputfromactions" class="tsd-anchor"></a>
 					<h3>build<wbr>Update<wbr>Input<wbr>From<wbr>Actions</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
@@ -681,7 +716,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -728,7 +763,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L713">requestBuilder.ts:713</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/requestBuilder.ts#L743">requestBuilder.ts:743</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -759,6 +794,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_condition_.html">"<wbr>Condition"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
@@ -835,6 +873,9 @@
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_requestbuilder_.html#buildscaninput" class="tsd-kind-icon">build<wbr>Scan<wbr>Input</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_requestbuilder_.html#buildtransactwriteitemsinput" class="tsd-kind-icon">build<wbr>Transact<wbr>Write<wbr>Items<wbr>Input</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_requestbuilder_.html#buildupdateinputfromactions" class="tsd-kind-icon">build<wbr>Update<wbr>Input<wbr>From<wbr>Actions</a>
