--- a/interfaces/_scopeddynameh_.scopeddynameh.html
+++ b/interfaces/_scopeddynameh_.scopeddynameh.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>UpdateExpressionSetAdd | Dynameh</title>
+	<title>ScopedDynameh | Dynameh</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/_updateexpressionaction_.html">&quot;UpdateExpressionAction&quot;</a>
+					<a href="../modules/_scopeddynameh_.html">&quot;ScopedDynameh&quot;</a>
 				</li>
 				<li>
-					<a href="_updateexpressionaction_.updateexpressionsetadd.html">UpdateExpressionSetAdd</a>
+					<a href="_scopeddynameh_.scopeddynameh.html">ScopedDynameh</a>
 				</li>
 			</ul>
-			<h1>Interface UpdateExpressionSetAdd</h1>
+			<h1>Interface ScopedDynameh</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +70,8 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Add an element to an existing Set.</p>
+						<p>An instance of Dynameh scoped to a particular TableSchema.  All calls that require
+						a TableSchema have that parameter already filled in.</p>
 					</div>
 				</div>
 			</section>
@@ -78,7 +79,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">UpdateExpressionSetAdd</span>
+						<span class="target">ScopedDynameh</span>
 					</li>
 				</ul>
 			</section>
@@ -89,9 +90,10 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionsetadd.html#action" class="tsd-kind-icon">action</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionsetadd.html#attribute" class="tsd-kind-icon">attribute</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionsetadd.html#values" class="tsd-kind-icon">values</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_scopeddynameh_.scopeddynameh.html#batchhelper" class="tsd-kind-icon">batch<wbr>Helper</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_scopeddynameh_.scopeddynameh.html#concurrenthelper" class="tsd-kind-icon">concurrent<wbr>Helper</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_scopeddynameh_.scopeddynameh.html#requestbuilder" class="tsd-kind-icon">request<wbr>Builder</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_scopeddynameh_.scopeddynameh.html#responseunwrapper" class="tsd-kind-icon">response<wbr>Unwrapper</a></li>
 							</ul>
 						</section>
 					</div>
@@ -100,52 +102,49 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="action" class="tsd-anchor"></a>
-					<h3>action</h3>
-					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"set_add"</span></div>
+					<a name="batchhelper" class="tsd-anchor"></a>
+					<h3>batch<wbr>Helper</h3>
+					<div class="tsd-signature tsd-kind-icon">batch<wbr>Helper<span class="tsd-signature-symbol">:</span> <a href="../modules/_batchhelper_.html" class="tsd-signature-type">&quot;batchHelper&quot;</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/UpdateExpressionAction.ts#L227">UpdateExpressionAction.ts:227</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/ScopedDynameh.ts#L16">ScopedDynameh.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="attribute" class="tsd-anchor"></a>
-					<h3>attribute</h3>
-					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="concurrenthelper" class="tsd-anchor"></a>
+					<h3>concurrent<wbr>Helper</h3>
+					<div class="tsd-signature tsd-kind-icon">concurrent<wbr>Helper<span class="tsd-signature-symbol">:</span> <a href="../modules/_concurrenthelper_.html" class="tsd-signature-type">&quot;concurrentHelper&quot;</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/UpdateExpressionAction.ts#L236">UpdateExpressionAction.ts:236</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/ScopedDynameh.ts#L18">ScopedDynameh.ts:18</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>The attribute name to update.  Nested attributes
-								can be accessed using dot notation; for example <code>a.b.c</code>.  Attribute
-								names with literal dots should escape them with a backslash; for
-							example <code>a\.b\.c</code>.</p>
-						</div>
-						<dl class="tsd-comment-tags">
-							<dt>see</dt>
-							<dd><p><a href="https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html">https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html</a></p>
-							</dd>
-						</dl>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="requestbuilder" class="tsd-anchor"></a>
+					<h3>request<wbr>Builder</h3>
+					<div class="tsd-signature tsd-kind-icon">request<wbr>Builder<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/ScopedDynameh.ts#L20">ScopedDynameh.ts:20</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+						</ul>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="values" class="tsd-anchor"></a>
-					<h3>values</h3>
-					<div class="tsd-signature tsd-kind-icon">values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Set</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Set</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Set</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Buffer</span><span class="tsd-signature-symbol">&gt;</span></div>
+					<a name="responseunwrapper" class="tsd-anchor"></a>
+					<h3>response<wbr>Unwrapper</h3>
+					<div class="tsd-signature tsd-kind-icon">response<wbr>Unwrapper<span class="tsd-signature-symbol">:</span> <a href="../modules/_responseunwrapper_.html" class="tsd-signature-type">&quot;responseUnwrapper&quot;</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/UpdateExpressionAction.ts#L241">UpdateExpressionAction.ts:241</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/ScopedDynameh.ts#L41">ScopedDynameh.ts:41</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>A Set of strings, numbers or Buffers.</p>
-						</div>
-					</div>
 				</section>
 			</section>
 		</div>
@@ -158,13 +157,13 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -195,57 +194,27 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistappend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Append</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistprepend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Prepend</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Remove<wbr>AtIndex</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistsetatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Set<wbr>AtIndex</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionnumberadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Add</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Subtract</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionput.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionputifnotexists.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put<wbr>IfNot<wbr>Exists</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionremove.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Remove</a>
-					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionsetadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Add</a>
+						<a href="_scopeddynameh_.scopeddynameh.html" class="tsd-kind-icon">Scoped<wbr>Dynameh</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionsetadd.html#action" class="tsd-kind-icon">action</a>
+								<a href="_scopeddynameh_.scopeddynameh.html#batchhelper" class="tsd-kind-icon">batch<wbr>Helper</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionsetadd.html#attribute" class="tsd-kind-icon">attribute</a>
+								<a href="_scopeddynameh_.scopeddynameh.html#concurrenthelper" class="tsd-kind-icon">concurrent<wbr>Helper</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionsetadd.html#values" class="tsd-kind-icon">values</a>
+								<a href="_scopeddynameh_.scopeddynameh.html#requestbuilder" class="tsd-kind-icon">request<wbr>Builder</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_scopeddynameh_.scopeddynameh.html#responseunwrapper" class="tsd-kind-icon">response<wbr>Unwrapper</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionsetdelete.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Delete</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
-						<a href="../modules/_updateexpressionaction_.html#updateexpressionaction" class="tsd-kind-icon">Update<wbr>Expression<wbr>Action</a>
-					</li>
 				</ul>
 			</nav>
 		</div>
