--- a/interfaces/_updateexpressionaction_.updateexpressionlistremoveatindex.html
+++ b/interfaces/_updateexpressionaction_.updateexpressionlistremoveatindex.html
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"list_remove_at_index"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/UpdateExpressionAction.ts#L206">UpdateExpressionAction.ts:206</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/UpdateExpressionAction.ts#L206">UpdateExpressionAction.ts:206</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -116,7 +116,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/UpdateExpressionAction.ts#L215">UpdateExpressionAction.ts:215</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/UpdateExpressionAction.ts#L215">UpdateExpressionAction.ts:215</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -139,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">index<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/UpdateExpressionAction.ts#L220">UpdateExpressionAction.ts:220</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/8162eee/src/UpdateExpressionAction.ts#L220">UpdateExpressionAction.ts:220</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -158,6 +158,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
