--- a/modules/_tableschema_.html
+++ b/modules/_tableschema_.html
@@ -87,6 +87,9 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_condition_.html">"<wbr>Condition"</a>
 					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
