--- a/globals.html
+++ b/globals.html
@@ -69,7 +69,7 @@
 							<h3>External modules</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-external-module"><a href="modules/_condition_.html" class="tsd-kind-icon">"<wbr>Condition"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_scopeddynameh_.html" class="tsd-kind-icon">"<wbr>Scoped<wbr>Dynameh"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_fluentdynameh_.html" class="tsd-kind-icon">"<wbr>Fluent<wbr>Dynameh"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_tableschema_.html" class="tsd-kind-icon">"<wbr>Table<wbr>Schema"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_updateexpressionaction_.html" class="tsd-kind-icon">"<wbr>Update<wbr>Expression<wbr>Action"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_batchhelper_.html" class="tsd-kind-icon">"batch<wbr>Helper"</a></li>
@@ -96,7 +96,7 @@
 						<a href="modules/_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+						<a href="modules/_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
