--- a/interfaces/_updateexpressionaction_.updateexpressionlistappend.html
+++ b/interfaces/_updateexpressionaction_.updateexpressionlistappend.html
@@ -105,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"list_append"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/f19b33c/src/UpdateExpressionAction.ts#L136">UpdateExpressionAction.ts:136</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/UpdateExpressionAction.ts#L136">UpdateExpressionAction.ts:136</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/f19b33c/src/UpdateExpressionAction.ts#L145">UpdateExpressionAction.ts:145</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/UpdateExpressionAction.ts#L145">UpdateExpressionAction.ts:145</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -138,7 +138,7 @@
 					<div class="tsd-signature tsd-kind-icon">values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/f19b33c/src/UpdateExpressionAction.ts#L150">UpdateExpressionAction.ts:150</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/UpdateExpressionAction.ts#L150">UpdateExpressionAction.ts:150</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -159,7 +159,7 @@
 						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+						<a href="../modules/_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
