--- a/interfaces/_updateexpressionaction_.updateexpressionremove.html
+++ b/interfaces/_updateexpressionaction_.updateexpressionremove.html
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"remove"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/f19b33c/src/UpdateExpressionAction.ts#L78">UpdateExpressionAction.ts:78</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/UpdateExpressionAction.ts#L78">UpdateExpressionAction.ts:78</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/f19b33c/src/UpdateExpressionAction.ts#L87">UpdateExpressionAction.ts:87</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/UpdateExpressionAction.ts#L87">UpdateExpressionAction.ts:87</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -143,7 +143,7 @@
 						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+						<a href="../modules/_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
